Restore ouptut and call it 8.3.

--- a/vignettes/RegionsOfInterest.Rmd
+++ b/vignettes/RegionsOfInterest.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Regions interrupting colinearity"
+title: "Regions of interest"
 author: 
  - "Charles Plessy"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
-  %\VignetteIndexEntry{Regions interrupting colinearity}
+  %\VignetteIndexEntry{Regions of interest}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
