--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -30,7 +30,6 @@ library('OikScrambling')   |> suppressPackageStartupMessages()
 library('GenomicFeatures') |> suppressPackageStartupMessages()
 library('heatmaps')        |> suppressPackageStartupMessages()
 genomes     <- OikScrambling:::loadAllGenomes(compat = F)
-transcripts <- OikScrambling:::loadAllTranscriptsGR() |> suppressWarnings()
 annots      <- OikScrambling:::loadAllAnnotations()   |> suppressWarnings()
 reps        <- OikScrambling:::loadAllRepeats(compat = F)
 load("BreakPoints.Rdata")
@@ -51,7 +50,7 @@ Lets look at `GC` content before and after coalescing:
 
 ```{r echo=T, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
 #hm_GC1 <- sapply(gbs,  bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
-hm_GC2 <- sapply(coa[1:15],  bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
+hm_GC2 <- sapply(coa[1:15],  bp_heatmap, win = 1000, pat = "GC", direction = "left") |> SimpleList()
 #hm_GC3 <- sapply(coa2, bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
@@ -80,7 +79,7 @@ Now looking at TATA content:
 
 ```{r TATA, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
 #hm_GC1_TATA <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
-hm_GC2_TATA <- sapply(coa[1:15], bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
+hm_GC2_TATA <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "TATA", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
 #sm_GC1_TATA <- sapply(hm_GC1_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
@@ -105,7 +104,7 @@ directly after promoter regions.
 
 ```{r AAGCsGCwwmkCGrCTTyn, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
 #hm_GC1_mot <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
-hm_GC2_mot <- sapply(coa[1:15], bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
+hm_GC2_mot <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
 #sm_GC1_mot <- sapply(hm_GC1_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
@@ -199,8 +198,8 @@ of these 3-way analyses; one between Osaka-Okinawa-Norway, and one between
 Osaka-Okinawa-Aomori.
 
 ```{r breakpoint_hotspot_gbs}
-bp_pair_analysis(gr_ref_q1 = gbs$Osa_Oki, gr_ref_q2 = gbs$Osa_Nor, win = 1000, lab = "Oki~Nor") |> plotHeatmapMeta()
-bp_pair_analysis(gr_ref_q1 = gbs$Osa_Oki, gr_ref_q2 = gbs$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotHeatmapMeta()
+bp_pair_analysis(gbs$Osa_Oki, gbs$Osa_Nor, win = 1000, lab = "Oki~Nor") |> plotHeatmapMeta()
+bp_pair_analysis(gbs$Osa_Oki, gbs$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotHeatmapMeta()
 ```
 
 The accumulation of alignment breaks of one pairwise alignment onto another
@@ -209,8 +208,8 @@ more likely to occur. Intuitively, this would lead to the presumption of synteny
 blocks, also. The pattern is consistent after coalescing, too;
 
 ```{r breakpoint_hotspot_coa}
-bp_pair_analysis(gr_ref_q1 = coa$Osa_Oki, gr_ref_q2 = coa$Osa_Nor, win = 1000, lab = "Oki~Nor") |> plotHeatmapMeta()
-bp_pair_analysis(gr_ref_q1 = coa$Osa_Oki, gr_ref_q2 = coa$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotHeatmapMeta()
+bp_pair_analysis(coa$Osa_Oki, coa$Osa_Nor, win = 1000, lab = "Oki~Nor") |> plotHeatmapMeta()
+bp_pair_analysis(coa$Osa_Oki, coa$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotHeatmapMeta()
 ```
 
 # Gene feature coverage around aligned and unaligned genomic regions.
@@ -282,12 +281,14 @@ computePlotData <- function(target, query, CE=NULL, tfbs=NULL) {
   current_GB_unmap          <- unmap[[pair]]
   current_GB_unalMap        <- unalMap[[pair]]
   
+  targetGenome <- unique(genome(gbs[[pair]]))
+  
   hmList <- SimpleList()
-  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[target]], CE, tfbs)
-  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[target]], CE, tfbs)
-  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[target]], CE, tfbs)
-  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[target]], CE, tfbs)
-  hmList$unalMap    <- prepareFreqPlot(current_GB_unalMap,    annots[[target]], reps[[target]], CE, tfbs)
+  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[targetGenome]], CE, tfbs)
+  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[targetGenome]], CE, tfbs)
+  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[targetGenome]], CE, tfbs)
+  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[targetGenome]], CE, tfbs)
+  hmList$unalMap    <- prepareFreqPlot(current_GB_unalMap,    annots[[target]], reps[[targetGenome]], CE, tfbs)
   hmList
 }
 
